--- a/style.css
+++ b/style.css
@@ -32,6 +32,18 @@ section {
   margin: 0 auto;
 }
 
+h3 {
+  font-size: 23px;
+}
+
+.buttons {
+  text-transform: uppercase;
+  color: #fff;
+  background: #000;
+  width: 192px;
+  height: 44px;
+}
+
 .nav-bar {
     display: flex;
     align-items: center;
@@ -99,10 +111,7 @@ section {
 .gallery {
   display: flex;
   flex-direction: column;
-}
-
-.gallery h3 {
-  font-size: 23px;
+  position: relative;
 }
 
 .gallery img {
@@ -115,7 +124,6 @@ section {
 }
 
 .prices span, .prices h3 {
-  font-size: 23px;
   white-space: nowrap;
 }
 
@@ -128,10 +136,53 @@ section {
 }
 
 .prices_button {
-  text-transform: uppercase;
+  margin-top: 20px;
+}
+
+.prices span:nth-child(n+2) {
+  color: #AF7842;
+}
+
+.gallery_button {
+  position: absolute;
   color: #fff;
   background: #000;
-  width: 192px;
-  height: 44px;
-  margin-top: 20px;
+  width: 48px;
+  height: 60px;
+  right: 0px;
+  top: 50%;
+}
+
+.dots_under_img {
+  padding-left: 50%;
+}
+
+.dots_separator {
+  width: 100%;
+  height: 1px;
+  border-bottom: 3px dotted;
+  transform: rotate(90deg);
+}
+
+.contacts_and_registration {
+  margin-top: 70px;
+  background-color: #fff;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: left;
+}
+
+.contacts_header_span {
+  text-transform: uppercase; 
+  color: #AF7842
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  line-height: 30px;
 }
