--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ section {
 
 h3 {
   font-size: 23px;
+  text-transform: uppercase;
 }
 
 .buttons {
@@ -159,14 +160,18 @@ h3 {
 
 .dots_separator {
   width: 100%;
-  height: 1px;
   border-bottom: 3px dotted;
   transform: rotate(90deg);
 }
 
 .contacts_and_registration {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin-top: 70px;
+  padding: 40px;
   background-color: #fff;
+  line-height: 40px;
 }
 
 .contacts {
@@ -184,5 +189,14 @@ h3 {
 .info {
   display: flex;
   flex-direction: column;
-  line-height: 30px;
+}
+
+.contacts_buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+.registration_input {
+  border: 3px solid #000;
+  height: 44px;
 }
