--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ h3 {
 }
 
 .dots_separator {
-  width: 100%;
+  width: 100px;
   border-bottom: 3px dotted;
   transform: rotate(90deg);
 }
@@ -167,8 +167,8 @@ h3 {
 .contacts_and_registration {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   margin-top: 70px;
+  margin-bottom: 70px;
   padding: 40px;
   background-color: #fff;
   line-height: 40px;
@@ -179,6 +179,11 @@ h3 {
   flex-direction: column;
   align-content: center;
   justify-content: left;
+  width: 50%;
+}
+
+.registration {
+  width: 50%
 }
 
 .contacts_header_span {
@@ -199,4 +204,42 @@ h3 {
 .registration_input {
   border: 3px solid #000;
   height: 44px;
+  text-align: center;
+}
+
+.date_input {
+  display: flex;
+  width: 100px;
+}
+
+.time_input {
+  display: flex;
+  width: 80px;
+}
+
+.phone_input {
+  display: flex;
+  width: 150px;
+}
+
+.order_info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.customer_name {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.footer_info {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
+.suggestions_and_questions {
+  background-color: #242424;
+  color: #fff;
 }
