--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    max-width: 1020px;
+    margin: 0 auto;
 }
 
 .nav-links a {
@@ -101,6 +103,7 @@ h3 {
   text-transform: uppercase;
   background-color: #FBF7F4;
   padding: 40px;
+  max-width: 940px;
   width: 100%;
 }
 
@@ -233,13 +236,59 @@ h3 {
   margin-bottom: 20px;
 }
 
+footer {
+  background-color: #242424;
+  display: flex;
+  justify-content: center;
+}
+
+.footer_container {
+  max-width: 1020px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 40px;
+}
+
+
 .footer_info {
   color: #fff;
   display: flex;
   flex-direction: column;
+  line-height: 35px;
 }
 
 .suggestions_and_questions {
-  background-color: #242424;
+  display: flex;
+  flex-direction: column;
   color: #fff;
+}
+
+.footer_button img {
+  height: 48px;
+}
+
+.footer_input {
+  width: 263px;
+  height: 44px;
+}
+
+.footer_input_container {
+  display: flex;
+  margin-top: 14px;
+}
+
+.socials{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.socials_buttons {
+  margin-top: 14px;
+  margin-right: 8px;
+}
+.socials_buttons:last-child {
+  margin-right: 0;
 }
